if MANUALUPDATE

CONVERTED_TO_ASCIIDOC = \
	apcsmart.html \
	bcmxcp.html \
	bcmxcp_usb.html \
	belkin.html \
	belkinunv.html \
	bestfcom.html \
	bestfortress.html \
	bestuferrups.html \
	bestups.html \
	blazer.html \
	clone.html \
	dummy-ups.html \
	etapro.html \
	everups.html \
	gamatronic.html \
	genericups.html \
	hosts.conf.html \
	index.html \
	isbmex.html \
	libupsclient-config.html \
	liebert.html \
	liebertgxt2.html \
	masterguard.html \
	megatec.html \
	megatec_usb.html \
	metasys.html \
	mge-shut.html \
	mge-utalk.html \
	microdowell.html \
	netxml-ups.html \
	nut.conf.html \
	nutupsdrv.html \
	oneac.html \
	optiups.html \
	powercom.html \
	powerman-pdu.html \
	powerpanel.html \
	rhino.html \
	richcomm_usb.html \
	safenet.html \
	skel.html \
	snmp-ups.html \
	solis.html \
	tripplite.html \
	tripplitesu.html \
	tripplite_usb.html \
	upscode2.html \
	ups.conf.html \
	upsc.html \
	upscmd.html \
	upsclient.html \
	upscli_connect.html \
	upscli_disconnect.html \
	upscli_fd.html \
	upscli_get.html \
	upscli_list_next.html \
	upscli_list_start.html \
	upsd.html \
	upsd.conf.html \
	upsd.users.html \
	upsdrvctl.html \
	upsimage.cgi.html \
	upslog.html \
	upsmon.html \
	upsmon.conf.html \
	upsrw.html \
	upssched.html \
	upssched.conf.html \
	upsset.cgi.html \
	upsset.conf.html \
	upsstats.cgi.html \
	upsstats.html.html \
	usbhid-ups.html \
	victronups.html

EXTRA_DIST = \
	apcsmart.txt \
	bcmxcp.txt \
	bcmxcp_usb.txt \
	belkin.txt \
	belkinunv.txt \
	bestfcom.txt \
	bestfortress.txt \
	bestuferrups.txt \
	bestups.txt \
	blazer.txt \
	clone.txt \
	dummy-ups.txt \
	etapro.txt \
	everups.txt \
	gamatronic.txt \
	genericups.txt \
	hosts.conf.txt \
	index.txt \
	isbmex.txt \
	libupsclient-config.txt \
	liebert.txt \
	liebertgxt2.txt \
	masterguard.txt \
	megatec.txt \
	megatec_usb.txt \
	metasys.txt \
	mge-shut.txt \
	mge-utalk.txt \
	microdowell.txt \
	netxml-ups.txt \
	nut.conf.txt \
	nutupsdrv.txt \
	oneac.txt \
	optiups.txt \
	powercom.txt \
	powerman-pdu.txt \
	powerpanel.txt \
	rhino.txt \
	richcomm_usb.txt \
	safenet.txt \
	skel.txt \
	snmp-ups.txt \
	solis.txt \
	tripplite.txt \
	tripplitesu.txt \
	tripplite_usb.txt \
	upscode2.txt \
	ups.conf.txt \
	upsc.txt \
	upscmd.txt \
	upsclient.txt \
	upscli_connect.txt \
	upscli_disconnect.txt \
	upscli_fd.txt \
	upscli_get.txt \
	upscli_list_next.txt \
	upscli_list_start.txt \
	upsd.conf.txt \
	upsd.users.txt \
	upsd.txt \
	upsdrvctl.txt \
	upsimage.cgi.txt \
	upslog.txt \
	upsmon.txt \
	upsmon.conf.txt \
	upsrw.txt \
	upssched.txt \
	upssched.conf.txt \
	upsset.cgi.txt \
	upsset.conf.txt \
	upsstats.cgi.txt \
	upsstats.html.txt \
	usbhid-ups.txt \
	victronups.txt \
	$(CONVERTED_TO_ASCIIDOC) \
	$(MANS)

# http://www.gnu.org/software/hello/manual/automake/Man-pages.html
man1_MANS = \
	libupsclient-config.1

man3_MANS = \
	upsclient.3 \
	upscli_connect.3 \
	upscli_disconnect.3 \
	upscli_fd.3 \
	upscli_get.3 \
	upscli_list_next.3 \
	upscli_list_start.3

man5_MANS = \
	hosts.conf.5 \
	nut.conf.5 \
	ups.conf.5 \
	upsd.conf.5 \
	upsd.users.5 \
	upsmon.conf.5 \
	upssched.conf.5 \
	upsset.conf.5 \
	upsstats.html.5

man8_MANS = \
	apcsmart.8 \
	bcmxcp.8 \
	bcmxcp_usb.8 \
	belkin.8 \
	belkinunv.8 \
	bestfcom.8 \
	bestfortress.8 \
	bestuferrups.8 \
	bestups.8 \
	blazer.8 \
	clone.8 \
	dummy-ups.8 \
	etapro.8 \
	everups.8 \
	gamatronic.8 \
	genericups.8 \
	isbmex.8 \
	liebert.8 \
	liebertgxt2.8 \
	masterguard.8 \
	megatec.8 \
	megatec_usb.8 \
	metasys.8 \
	mge-shut.8 \
	mge-utalk.8 \
	microdowell.8 \
	netxml-ups.8 \
	nutupsdrv.8 \
	oneac.8 \
	optiups.8 \
	powercom.8 \
	powerman-pdu.8 \
	powerpanel.8 \
	rhino.8 \
	richcomm_usb.8 \
	safenet.8 \
	skel.8 \
	snmp-ups.8 \
	solis.8 \
	tripplite.8 \
	tripplitesu.8 \
	tripplite_usb.8 \
	upscode2.8 \
	upsc.8 \
	upsd.8 \
	upslog.8 \
	upscmd.8 \
	upsdrvctl.8 \
	upsimage.cgi.8 \
	upsmon.8 \
	upsrw.8 \
	upssched.8 \
	upsset.cgi.8 \
	upsstats.cgi.8 \
	usbhid-ups.8 \
	victronups.8

html:	$(CONVERTED_TO_ASCIIDOC)

clean-local:
	rm -f $(CONVERTED_TO_ASCIIDOC) $(MANS) *.xml

SUFFIXES = .txt .html .1 .3 .5 .8

.txt.html:
	$(ASCIIDOC) --backend=xhtml11 \
		--attribute localdate=`TZ=UTC date +%Y-%m-%d` \
		--attribute localtime=`TZ=UTC date +%H:%M:%S` \
		-o $@ $<

### The --destination-dir flag doesn't seem to affect the intermediate .xml file.
### Hence, the copying dance below.
A2X_MANPAGE_OPTS = -f manpage --attribute nutversion="@PACKAGE_VERSION@"

.txt.1:
	test -f `basename $<` || cp -p $< .
	$(A2X) $(A2X_MANPAGE_OPTS) `basename $<`
	
.txt.3:
	test -f `basename $<` || cp -p $< .
	$(A2X) $(A2X_MANPAGE_OPTS) `basename $<`
	
.txt.5:
	test -f `basename $<` || cp -p $< .
	$(A2X) $(A2X_MANPAGE_OPTS) `basename $<`
	
.txt.8:
	test -f `basename $<` || cp -p $< .
	$(A2X) $(A2X_MANPAGE_OPTS) `basename $<`
	
else !MANUALUPDATE
html:	html-recursive
	@echo "Not building HTML documentation since 'asciidoc' was not found."
endif !MANUALUPDATE
